# NeedleChain

./: LOCAL_MODELS.md  README.md  evaluate.py  inference_all.py  inference_call.py  local_model_serve.py  make_data.py  model_serve.py  pyproject.toml  requirements.txt  run_llama32_with_fallbacks.py  run_local.py  run_openai.py  test_llama32_1b.py  test_scripts.py  test_simple_run.py  utils.py
data/: k10---val1600.jsonl  k5---val1600.jsonl  k50---val1600.jsonl
scripts/: README.md  batch_evaluation.sh  full_evaluation.sh  llama3_2_1b_auto_fallback.sh  llama3_2_1b_eval.sh  llama3_2_1b_flash_attn.sh  llama3_2_1b_torch_sdpa.sh  llama3_2_1b_xformers.sh  run_llama32_with_fallbacks.py  run_local.py  serve_only_flash_attn.sh  stage1_host_model.sh  stage2_run_evaluation.sh  test_different_ks.sh
test_configs/: config.json  rope_linear.json
